--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "angular-seed",
-  "private": true,
-  "version": "0.0.0",
+  "name": "hacks",
+  "private": false,
+  "version": "0.0.1",
   "description": "A starter project for AngularJS",
-  "repository": "https://github.com/angular/angular-seed",
+  "repository": "https://github.com/ayld/ng-hacks",
   "license": "MIT",
   "devDependencies": {
     "karma": "~0.10",
